src/styles/modules/qn/Button.less
.qn-Button {
  .textShadow();
  background-color: @color-Interactive--150;
  border: unit(2/16, em) solid @color-Interactive--400;
  border-radius: 0.25em;
  color: @color-Interactive--750;
  padding: unit(10/16, em);
  position: relative;
  text-decoration: none;

  &:hover,
  &:focus {
    .textShadow(@color-Interactive--750);
    background-color: @color-Interactive--400;
    color: @color-White;
  }

  &:focus {
    .focus();
  }

  &:active {
    position: relative;
    top: unit(1/16, em);
  }

  &--disabled,
  &[disabled],
  fieldset[disabled] & {
    .disabled();
  }

  &--primary {
    background-color: @color-Interactive--750;
    border-color: @color-Interactive--750;
    color: @color-White;
    text-shadow: none;

    &:hover,
    &:focus {
      background-color: @color-White;
      color: @color-Interactive--750;
      text-shadow: inherit;
    }

    &--disabled,
    &[disabled],
    fieldset[disabled] & {
      .disabled();
    }
  }

  .disabled() {
    cursor: default;

    &,
    &:hover,
    &:focus {
      .textShadow();
      background-color: @color-Interactive--100;
      border-color: @color-Interactive--150;
      color: @color-Interactive--400;
    }

    &:active {
      top: 0;
    }
  }
}

